ON-400 ON-402 deprecated constructor cleanup